--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -19,6 +19,6 @@ collections:
       - { label: "Author", name: "author", widget: "string"}
       - { label: "Date", name: "date", widget: "datetime"}
       - { label: "Tags", name: "tags", widget: "list", default:["post"]}
-      - { label: "Featured Image", name: "thumbnail", widget: "image"}
+      - { label: "Featured Image", name: "image", widget: "image"}
       - { label: "Image Caption", name: "imageAlt", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
